# algo-expert

./: .gitignore  README.md  main.py  pyproject.toml
.specify/specs/001-project-setup/: spec.md
.specify/specs/002-crypto-exchange-library/: plan.md  spec.md  tasks.md
.specify/specs/003-trading-functionality/: spec.md  tasks.md
.specify/specs/004-logging-configuration/: plan.md  spec.md  tasks.md
docs/: api-reference.md  getting-started.md  index.md
examples/ema_expert_binance/: .env.example  README.md  expert_ema.py  pyproject.toml
examples/ema_expert_bybit/: .env.example  README.md  expert_ema.py  pyproject.toml
examples/websocket_test/: .env.example  pyproject.toml  test_websocket.py
specs/001-project-setup/: plan.md
specs/002-crypto-exchange-library/: spec.md  tasks.md
src/algoexpert/: __init__.py  aggregator.py  logging_config.py
src/algoexpert/exchanges/: binance.py  bybit.py  protocol.py
tests/contract/: test_exchange_adapter.py
tests/integration/: test_binance_connection.py  test_bybit_connection.py
tests/unit/: test_algo_expert.py
