[project]
name = "websocket-test"
version = "0.1.0"
description = "Example script to test AlgoExpert websocket connection."
requires-python = ">=3.12"
dependencies = [
    "algoexpert",
    "python-dotenv"
]

[tool.uv.sources]
algoexpert = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
